--- a/config/ekf_localization_config.yaml
+++ b/config/ekf_localization_config.yaml
@@ -9,7 +9,7 @@ debug: false
 
 map_frame: map
 odom_frame: odom
-base_link_frame: base_link
+base_link_frame: base_footprint
 world_frame: odom
 publish_tf: true
 
